@@ -122,8 +122,13 @@
      
      ("none" void)))
 
-  (add-type! ws (make <glist-of-type> #:name 'glist-of))
+  (add-type! ws (make <glist-of-type> #:name 'glist-of
+                      #:type-cname "GList*" #:func-prefix "g_list"))
   (add-type-alias! ws "GList*" 'glist-of)
+
+  (add-type! ws (make <glist-of-type> #:name 'gslist-of
+                      #:type-cname "GSList*" #:func-prefix "g_slist"))
+  (add-type-alias! ws "GSList*" 'gslist-of)
 
   (add-type! ws (make <gerror-type> #:name '<GError>))
   (add-type-alias! ws "GError**" '<GError>)
@@ -136,7 +141,9 @@
 ;; ((glist-of (<gtk-window> gw:const) gw:const) win-list)
 ;; shamelessly stolen from upstream g-wrap so that we can use glib 2.0
 
-(define-class <glist-of-type> (<gw-type>))
+(define-class <glist-of-type> (<gw-type>)
+  (type-cname #:getter type-cname #:init-keyword #:type-cname)
+  (func-prefix #:getter func-prefix #:init-keyword #:func-prefix))
 
 (define-class <gw-collection-typespec> (<gw-typespec>)
   (sub-typespec #:getter sub-typespec #:init-keyword #:sub-typespec))
@@ -145,13 +152,13 @@
   (cons (type (sub-typespec ts)) (next-method)))
 
 (define-method (c-type-name (type <glist-of-type>))
-  "GList*")
+  (type-cname type))
 
 (define-method (c-type-name (type <glist-of-type>)
                             (typespec <gw-collection-typespec>))
   (if (memq 'const (options typespec))
-      "const GList*"
-      "GList *"))
+      (list "const " (type-cname type))
+      (type-cname type)))
 
 ;; if this succeeds, the glist-of typespec-options will be
 ;; (sub-typespec (caller-owned | callee-owned) [const])
@@ -159,7 +166,7 @@
   ;; FIXME: Use raise, not throw
   (if (null? options)
       (throw 'gw:bad-typespec
-               "Missing glist-of options form." options))
+             "Missing glist-of options form." options))
   (if (< (length options) 2)
       (throw 'gw:bad-typespec
              "glist-of options form must have at least 2 options."
@@ -179,7 +186,7 @@
              (memq 'callee-owned remainder))
         (throw 'gw:bad-typespec
                "Bad glist-of options form (caller and callee owned!)."
-                 options))
+               options))
     
     (if (not (or (memq 'caller-owned remainder)
                  (memq 'callee-owned remainder)))
@@ -195,8 +202,8 @@
           #:sub-typespec sub-typespec
           #:options glist-options)
         (throw 'gw:bad-typespec
-                 "Bad glist-of options form - spurious options: "
-                 remainder))))
+               "Bad glist-of options form - spurious options: "
+               remainder))))
 
 (define-method (unwrap-value-cg (glist-type <glist-of-type>)
                                 (value <gw-value>)
@@ -207,6 +214,7 @@
          (sub-typespec (sub-typespec (typespec value)))
          (sub-type (type sub-typespec))
          (tmp-rest-var (gen-c-tmp "scm_rest"))
+         (func-prefix (func-prefix glist-type))
          (sub-item-c-type (c-type-name sub-type sub-typespec))
          (tmp-sub-item-c-var (gen-c-tmp "c_item"))
          (tmp-sub-item-scm-var (gen-c-tmp "scm_item"))
@@ -231,13 +239,13 @@
        "\n"
        "    if(! " `(gw:error? ,status-var) " )\n"
        "    {\n"
-       "       " c-var " = g_list_prepend (" c-var ", (gpointer)" tmp-sub-item-c-var");\n"
+       "       " c-var " = " func-prefix "_prepend (" c-var ", (gpointer)" tmp-sub-item-c-var");\n"
        "    }\n"
        "    " tmp-rest-var " = SCM_CDR (" tmp-rest-var ");\n"
        "  }\n"
        "  if(!" `(gw:error? ,status-var) ")\n"
        "  {\n"
-       "    " c-var " = g_list_reverse(" c-var ");\n"
+       "    " c-var " = " func-prefix "_reverse(" c-var ");\n"
        "  }\n"
        "  else\n"
        "  {\n"
@@ -251,7 +259,7 @@
        (destruct-value-cg sub-type tmp-sub-item status-var) 
        tmp-cursor " = " (string-append tmp-cursor "->next") ";\n"
        "    }\n"
-       "    g_list_free(" c-var ");\n"
+       "    " func-prefix "_free(" c-var ");\n"
        "    " c-var " = NULL;\n"
        "  }\n"
        "}\n")))
@@ -305,6 +313,7 @@
          (options (options (typespec value)))
          (sub-typespec (sub-typespec (typespec value)))
          (sub-type (type sub-typespec))
+         (func-prefix (func-prefix glist-type))
          (sub-item-c-type (c-type-name sub-type sub-typespec))
          (tmp-sub-item-c-var (gen-c-tmp "c_item"))
          (tmp-sub-item (make <gw-value>
@@ -325,7 +334,7 @@
      (if (memq 'caller-owned options)
          (list "  if(" c-var ")\n"
                "  {\n"
-               "    g_list_free(" c-var ");\n"
+               "    " func-prefix "_free(" c-var ");\n"
                "    " c-var " = NULL;\n"
                "  }\n")
          '())
@@ -374,230 +383,3 @@
      (destruct-value-cg t value status-var)
      "  scm_throw(scm_str2symbol(\"g-error\"), scm_gerror);\n"
      "}\n")))
-
-
-
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;; ((gslist-of (<gtk-window> gw:const) gw:const) win-list)
-;; shamelessly stolen from upstream g-wrap so that we can use glib 2.0
-
-;;; FIXME: Convert or generalize glist-of and refactor
-
-;   (let ((glo (gw:wrap-type ws 'gslist-of)))
-    
-;     (define (c-type-name-func typespec)
-;       (if (memq 'const (gw:typespec-get-options typespec))
-;           "const GSList*"
-;           "GSList*"))
-    
-;     ;; if this succeeds, the gslist-of typespec-options will be
-;     ;; (sub-typespec (caller-owned | callee-owned) [const])
-;     (define (typespec-options-parser options-form wrapset)
-;       (if (null? options-form)
-;           (throw 'gw:bad-typespec
-;                  "Missing gslist-of options form."
-;                  options-form))
-;       (if (< (length options-form) 2)
-;           (throw 'gw:bad-typespec
-;                  "gslist-of options form must have at least 2 options."
-;                  options-form))
-;       (let* ((sub-typespec-form (car options-form))
-;              (gslist-options (cdr options-form))
-;              (sub-typespec (gw:prototype-form->typespec sub-typespec-form
-;                                                         wrapset))
-;              (remainder (cdr options-form)))
-        
-;         (set! remainder (delq 'const remainder))
-;         (if (and (memq 'caller-owned remainder)
-;                  (memq 'callee-owned remainder))
-;             (throw 'gw:bad-typespec
-;                    "Bad gslist-of options form (caller and callee owned!)."
-;                    options-form))
-        
-;         (if (not (or (memq 'caller-owned remainder)
-;                      (memq 'callee-owned remainder)))
-;             (throw
-;              'gw:bad-typespec
-;              "Bad gslist-of options form (must be caller or callee owned!)."
-;              options-form))
-;         (set! remainder (delq 'caller-owned remainder))
-;         (set! remainder (delq 'callee-owned remainder))
-;         (if (null? remainder)
-;             (cons sub-typespec gslist-options)
-;             (throw 'gw:bad-typespec
-;                    "Bad gslist-of options form - spurious options: "
-;                    remainder))))
-    
-;     (define (scm->c-ccg c-var scm-var typespec status-var)
-;       (let* ((options (gw:typespec-get-options typespec))
-;              (sub-typespec (car options))
-;              (sub-type (gw:typespec-get-type sub-typespec))
-;              (gslist-options (cdr options))
-;              (tmp-rest-var (gen-c-tmp "scm_rest"))
-;              (sub-item-c-type (gw:typespec-get-c-type-name sub-typespec))
-;              (tmp-sub-item-c-var (gen-c-tmp "c_item"))
-;              (tmp-sub-item-scm-var (gen-c-tmp "scm_item"))
-;              (sub-scm->c-ccg (gw:type-get-scm->c-ccg sub-type))
-;              (sub-destructor (gw:type-get-c-destructor sub-type))
-;              (tmp-cursor (gen-c-tmp "cursor")))
-        
-;         (list
-;          ;; Quiets gcc -Wall, although I think everything is covered here
-;          c-var " = NULL;\n"
-         
-;          "{\n"
-;          "  SCM " tmp-rest-var " = " scm-var ";\n"
-;          "  GSList *" tmp-cursor "= NULL;\n"
-;          "  " c-var "= NULL;\n"
-;          "  while(!SCM_NULLP(" tmp-rest-var ")\n"
-;          "        && (! " `(gw:error? ,status-var) "))\n"
-;          "  {\n"
-;          "    " sub-item-c-type " " tmp-sub-item-c-var ";\n"
-;          "    SCM " tmp-sub-item-scm-var " = SCM_CAR(" tmp-rest-var ");\n"
-;          "\n"
-;          (sub-scm->c-ccg tmp-sub-item-c-var
-;                          tmp-sub-item-scm-var
-;                          sub-typespec
-;                          status-var)
-;          "\n"
-;          "    if(! " `(gw:error? ,status-var) " )\n"
-;          "    {\n"
-;          "       " tmp-cursor " = g_slist_prepend (" tmp-cursor ", (gpointer)" tmp-sub-item-c-var");\n"
-;          "    }\n"
-;          "    " tmp-rest-var " = SCM_CDR (" tmp-rest-var ");\n"
-;          "  }\n"
-;          "  if(!" `(gw:error? ,status-var) ")\n"
-;          "  {\n"
-;          "    " c-var " = g_slist_reverse(" tmp-cursor ");\n"
-;          "  }\n"
-;          "  else\n"
-;          "  {\n"
-;          "    " tmp-cursor " = (GSList*)" c-var ";\n"
-;          "    while(" tmp-cursor ")\n"
-;          "    {\n"
-;          "      " sub-item-c-type " " tmp-sub-item-c-var ";\n"
-;          "      " tmp-sub-item-c-var " = ( " sub-item-c-type ") "
-;          (string-append tmp-cursor "->data") ";\n"
-;          (if sub-destructor
-;              (sub-destructor tmp-sub-item-c-var sub-typespec status-var #t)
-;              '())
-;          tmp-cursor " = " (string-append tmp-cursor "->next") ";\n"
-;          "    }\n"
-;          "    g_slist_free((GSList*)" c-var ");\n"
-;          "    " c-var " = NULL;\n"
-;          "  }\n"
-;          "}\n")))
-    
-;     (define (c->scm-ccg scm-var c-var typespec status-var)
-;       (let* ((options (gw:typespec-get-options typespec))
-;              (sub-typespec (car options))
-;              (sub-type (gw:typespec-get-type sub-typespec))
-;              (gslist-options (cdr options))
-;              (tmp-rest-var (gen-c-tmp "c_rest"))
-;              (sub-item-c-type (gw:typespec-get-c-type-name sub-typespec))
-;              (tmp-sub-item-c-var (gen-c-tmp "c_item"))
-;              (tmp-sub-item-scm-var (gen-c-tmp "scm_item"))
-;              (sub-c->scm-ccg (gw:type-get-c->scm-ccg sub-type)))
-        
-;         (list
-;          (c-type-name-func typespec) " " tmp-rest-var " = " c-var ";\n"
-;          scm-var "= SCM_EOL;\n"
-;          "while(" tmp-rest-var " && (! " `(gw:error? ,status-var) "))\n"
-;          "{\n"
-;          "  " sub-item-c-type " " tmp-sub-item-c-var ";\n"
-;          "  SCM " tmp-sub-item-scm-var ";\n"
-;          "\n"
-;          "  " tmp-sub-item-c-var " = ( " sub-item-c-type ") "
-;          (string-append tmp-rest-var "->data") ";\n"
-;          "\n"
-;          (sub-c->scm-ccg tmp-sub-item-scm-var
-;                          tmp-sub-item-c-var
-;                          sub-typespec
-;                          status-var)
-;          "\n"
-;          "  if(! " `(gw:error? ,status-var) " )\n"
-;          "  {\n"
-;          "     " scm-var " = scm_cons (" tmp-sub-item-scm-var ", " scm-var ");\n"
-;          "  }\n"
-;          "  " tmp-rest-var " = " (string-append tmp-rest-var "->next") ";\n"
-;          "}\n"
-;          "if(!" `(gw:error? ,status-var) ")\n"
-;          "{\n"
-;          "  " scm-var " = scm_reverse(" scm-var ");\n"
-;          "}\n")))
-    
-;     (define (c-destructor c-var typespec status-var force?)
-;       (let* ((options (gw:typespec-get-options typespec))
-;              (sub-typespec (car options))
-;              (sub-type (gw:typespec-get-type sub-typespec))
-;              (sub-item-c-type (gw:typespec-get-c-type-name sub-typespec))
-;              (tmp-sub-item-c-var (gen-c-tmp "c_item"))
-;              (sub-destructor (gw:type-get-c-destructor sub-type))
-             
-;              (tmp-cursor (gen-c-tmp "cursor")))
-;         (list
-;          "{\n"
-;          "  " (c-type-name-func typespec) " " tmp-cursor " = " c-var ";\n"
-;          "  while(" tmp-cursor ")\n"
-;          "  {\n"
-;          "    " sub-item-c-type " " tmp-sub-item-c-var ";\n"
-;          "    " tmp-sub-item-c-var " = ( " sub-item-c-type ") "
-;          (string-append tmp-cursor "->data") ";\n"
-;          (if sub-destructor
-;              (sub-destructor tmp-sub-item-c-var sub-typespec status-var #f)
-;              '())
-;          tmp-cursor " = " (string-append tmp-cursor "->next") ";\n"
-;          "  }\n"
-;          (if (or (memq 'caller-owned (gw:typespec-get-options typespec))
-;                  force?)
-;              (list "  if(" c-var ")\n"
-;                    "  {\n"
-;                    "    g_slist_free((GSList*)" c-var ");\n"
-;                    "    " c-var " = NULL;\n"
-;                    "  }\n")
-;              '())
-;          "}\n")))
-    
-;     (define (pre-call-arg-ccg param status-var)
-;       (let* ((scm-name (gw:param-get-scm-name param))
-;              (c-name (gw:param-get-c-name param))
-;              (typespec (gw:param-get-typespec param)))
-;         (list
-;          (scm->c-ccg c-name scm-name typespec status-var)
-;          "if(" `(gw:error? ,status-var type) ")"
-;          `(gw:error ,status-var arg-type)
-;          "else if(" `(gw:error? ,status-var range) ")"
-;          `(gw:error ,status-var arg-range))))
-    
-;     (define (call-ccg result func-call-code status-var)
-;       (list (gw:result-get-c-name result) " = " func-call-code ";\n"))
-    
-;     (define (post-call-result-ccg result status-var)
-;       (let* ((scm-name (gw:result-get-scm-name result))
-;              (c-name (gw:result-get-c-name result))
-;              (typespec (gw:result-get-typespec result)))
-;         (list
-;          (c->scm-ccg scm-name c-name typespec status-var)
-;          (c-destructor c-name typespec status-var #f))))
-    
-;     (define (post-call-arg-ccg param status-var)
-;       (let* ((c-name (gw:param-get-c-name param))
-;              (typespec (gw:param-get-typespec param)))
-;         (c-destructor c-name typespec status-var #f)))
-    
-;     (gw:type-set-c-type-name-func! glo c-type-name-func)
-;     (gw:type-set-typespec-options-parser! glo typespec-options-parser)
-    
-;     (gw:type-set-scm->c-ccg! glo scm->c-ccg)
-;     (gw:type-set-c->scm-ccg! glo c->scm-ccg)
-;     (gw:type-set-c-destructor! glo c-destructor)  
-    
-;     (gw:type-set-pre-call-arg-ccg! glo pre-call-arg-ccg)
-;     (gw:type-set-call-ccg! glo call-ccg)
-;     (gw:type-set-post-call-result-ccg! glo post-call-result-ccg)
-;     (gw:type-set-post-call-arg-ccg! glo post-call-arg-ccg)
-    
-;     glo)
-
-;;(register-type "guile-gnome-gw-glib" "GSList*" 'gslist-of)
-  
